--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ repositories {
 
 dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.6'
+    implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
